# diesel_auto_type

./: Cargo.toml  README.md
src/: auto_type.rs  lib.rs
src/auto_type/: case.rs  expression_type_inference.rs  local_variables_map.rs  mod.rs
tests/: test.rs
